# dev-ADDM

./: .gitignore  .gitmodules  AGENTS.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  memo  settings.local.json  sync_report_20260118.md  sync_state.json
.claude/rules/: benchmark.md  cli-commands.md  data-pipeline.md  evaluation.md  ground-truth.md  logging.md  methods.md
data/: README.md
data/formula_seeds/: G1_allergy_V2.json
doc/: fix.md
doc/longfix/: atkd_fix.md
docs/: AMOS_GENERALIZATION.md  BASELINES.md  README.md  ROADMAP.md  ROADMAP_SUMMARY.md  architecture.md  fix.md  gateinit_example.md  quickstart.md  troubleshooting.md
docs/data_analysis/: keyword_search_analysis.md  selection_bias_analysis.md
docs/developer/: add-method.md
docs/future/: high_quality_gt.md
docs/logs/: session_2026-01-18_doc-system-overhaul.md
docs/patches/: phase2_case_sensitivity.patch.md
docs/sessions/: session_2025-01-18_bye-skill-improvement.md  session_2025-01-18_policy-gt-generation.md  session_2026-01-18_amos-method-implementation.md  session_2026-01-18_batch-extraction-fixes.md  session_2026-01-18_batch-pipeline-refactor.md  session_2026-01-18_cache-rename.md  session_2026-01-18_cron-quiet-mode.md  session_2026-01-18_documentation-audit-fixes.md  session_2026-01-18_extraction-bugfixes.md  session_2026-01-18_fix-introduction-execution-model.md  session_2026-01-18_gpt5-baseline-testing.md  session_2026-01-18_hello-roadmap-integration.md  session_2026-01-18_intermediate-process-evaluation.md  (+22 more)
scripts/: README.md  build_dataset.py  build_topic_selection.py  build_yelp_context.py  create_restaurant_ids.py  debug_amos.py  debug_mismatch.py  download_amazon.sh  generate_evidence_fields.py  generate_policy_variants.py  run_gt_pipeline.sh  search_restaurants.py  select_contexts.py  select_diverse_samples.py  select_topic_restaurants.py  test_allergy_query.py  test_amos_all.py  test_phase1_all.py  test_phase1_approaches.py
tests/: batch_hello.py  conftest.py  test_amos_atkd_core.py  test_amos_compute.py  test_cli.py  test_dataset.py  test_executor.py  test_formulas.py  test_llm_mock.py  test_metrics.py  test_results.py  test_usage.py
(+1321 files in other folders)
