[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addm"
version = "0.1.0"
description = "ADDM experiment framework"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "orjson>=3.11.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
